
2010-03-18 R.Scharpf committed version 1.5.38

** a few updates to initializeBigMatrix
** show, [ defined for CNSetLM

2010-03-25 R.Scharpf committed version 1.5.41

** import snpCall, snpCallProbability, snpCall<-, snpCallProbability<-
   from Biobase
** updates to genotype, crlmmIlluminaRS, crlmmCopynumber
** class union of ff_matrix, matrix, and ffdf

2010-03-18 B Carvalho committed version 1.5.42

** added parallel/large dataset support to snprma/crlmm
** merged changes on .41 with my local changes

2010-04-01 R.Scharpf committed version 1.5.44

** added functions genotype2, cnrma2 for preprocessing and genotyping
   with crlmm2
** added crlmmCopynumber2 for parallel support with copy number
   est. (needs more checking)

2010-04-07 M. Ritchie committed version 1.5.45
** modified the storage of RG, XY and genotype call data to use the ff package and initializeBigMatrix() function from oligoClasses package.  The genotype call data now includes non-polymorphic probes (which have NA calls).  Functions which use ff storage are named readIdatFiles2(), RGtoXY2(), preprocessInfinium2v2(), crlmmIllumina2() and crlmmIlluminaV2().

2010-04-08 B Carvalho committed version 1.5.46
** moved NEWS to inst/

2010-04-09 M. Ritchie committed version 1.5.47
** fixed bugs in code and removed copy number probes from output 
(now saved separately as before - SnpSuperSet not used)
** crlmmIllumina2() and crlmmIlluminaV2() now use the crlmmGT2() 
function (which expects ff objects and supports parallel processing)
** updated crlmmIllumina.pdf vignette

2010-04-11 R. Scharpf committed version 1.5.48
** added a few .Rd files

2010-04-16 B Carvalho committed version 1.5.49
** cosmetics - looking for cause of memory spike

2010-04-24 B Carvalho committed version 1.7.1
** fixed bug in gender prediction that cause a spike in memory usage

2010-05-25 R. Scharpf committed version 1.7.2
** added example dataset
** fixed vignette: inst/scripts/copynumber.Rnw