@@ -63,6 +63,7 @@ export(crlmm,
 ##       ellipse, 
        genotype, 
        readIdatFiles, 
+       readIdatFiles2,
        snprma,
        snprma2,
        crlmm2,
